update home page

--- a/index.qmd
+++ b/index.qmd
@@ -2,18 +2,27 @@
 title: "Home"
 ---
 
-## About
+## What I'm Currently Doing
 
-I am a Statistics & Data Science major and Linguistics minor at UCSB. Currently, I serve as an Undergraduate Learning Assistant for both the PSTAT and CMPSC departments, helping students in introductory statistics and data science classes. I am also part of this year's data science capstone and will be working on an upcoming project with the [MOVE Lab](http://move.geog.ucsb.edu/).
+-   Statistics & Data Science major and Linguistics minor at UCSB
+-   Undergraduate Learning Assistant for PSTAT 10 (Data Science Principles) and CMPSC 5A (Introduction to Data Science)
+-   Capstone project with the [MOVE Lab](http://move.geog.ucsb.edu/)
 
-As for coding experience, I am most familiar with R and Python, though I have some knowledge of SQLite and Java from my [coursework](courses.html). I put a lot of emphasis on making my code readable, which not only helps my future self but also other people understand what I'm doing.
+## Coding
 
-I enjoy applying my programming skills to areas beyond data analysis as well. I am a 3-time recipient of the [Creative Computing Scholarship](https://summer.ucsb.edu/courses/course-spotlight/creative-computing), which has given me the opportunity to learn how technology can be uniquely integrated in different domains -- see some of these projects [here](projects.html#creative-coding).
+-   **Languages:** R, Python, SQL
+-   **Certifications:** [Data Visualization with R](https://www.datacamp.com/statement-of-accomplishment/track/20c51009d6acd3c9d7d50560026594e0608956d3)
+-   **Awards:** 3-time recipient of the [Creative Computing Scholarship](https://summer.ucsb.edu/courses/course-spotlight/creative-computing) (see some of these projects [here](projects.html#creative-coding))
 
-Outside of class, my interests include listening to music and learning Japanese.
+## Interests
+
+-   Writing readable code
+-   Listening to music
+-   Learning Japanese
+-   Using bullet points
 
 ## Links
 
--   [**GitHub**](https://github.com/hillfields)
--   [**Resume**](files/resume.pdf)
--   **Email:** justintliu\@ucsb.edu
+-   [GitHub](https://github.com/hillfields)
+-   [Resume](files/resume.pdf)
+-   [Email](mailto:justintliu@ucsb.edu)
