--- a/projects.qmd
+++ b/projects.qmd
@@ -28,7 +28,7 @@ r_text <- function() text_spec("R", color = "#ff9600")
 -   **Analyzing Voter Turnout in Alaska for the 2016 General Election** \| `r python_text()` \| [report](files/voter-turnout.html)
     -   Looked into how demographic factors played a role in whether Alaskan citizens voted in the 2016 general election
 -   **Analyzing UCSB Grades During Remote Instruction** \| `r python_text()` \| [report](files/ucsb-pandemic-grades.html)
-    -   Investigated the impact of online learning on UCSB students\' grades during the COVID-19 pandemic
+    -   Investigated the impact of online learning on UCSB students' grades during the COVID-19 pandemic
 -   **Lyrics Frequency Visualizer** \| `r python_text()` \| [code](https://github.com/hillfields/lyrics-frequency-visualizer)
     -   Made a simple app to access the Spotify API, scrape Japanese song lyrics, and visualize their word frequencies
 
