--- a/courses.qmd
+++ b/courses.qmd
@@ -13,7 +13,7 @@ r_text <- function() text_spec("R", color = "#ff9600")
 ## Currently Taking
 
 -   **LING 111:** Advanced Computational Linguistics: Text Processing (`r python_text()`)
--   **C LIT 152:** Digital Humanities Practice
+-   **C LIT 152:** Digital Humanities Practice (`r python_text()`)
 -   **PSTAT 197C:** Data Science Capstone (`r r_text()` & `r python_text()`)
 
 ## Computer Science
