--- a/projects.qmd
+++ b/projects.qmd
@@ -13,7 +13,7 @@ r_text <- function() text_spec("R", color = "#ff9600")
 ## R
 
 -   **Predicting Anime Scores** \| `r r_text()` \| [code](https://github.com/hillfields/predicting-anime-scores)
-    -   Built 6 classification models using cross-validation and hyperparameters to predict scores on an anime site
+    -   Built 6 regression models using cross-validation and hyperparameters to predict scores on an anime site
 -   **Clustering Analysis on Country Data** \| `r r_text()` \| [code](https://github.com/pstat197/vignette-clustering-methods), [vignette](files/clustering-vignette.html)
     -   Implemented unsupervised clustering methods to group countries based on socioeconomic and health conditions
 -   **Modeling Japan's Activity Rates in the 21st Century** \| `r r_text()` \| [code](https://github.com/hillfields/modeling-activity-rates), [report](files/modeling-activity-rates.pdf)
@@ -23,10 +23,10 @@ r_text <- function() text_spec("R", color = "#ff9600")
 
 ## Python
 
--   **Analyzing Voter Turnout in Alaska for the 2016 General Election** \| `r python_text()` \| [report](files/voter-turnout.html)
-    -   Looked into how demographic factors played a role in Alaskan voter participation during the 2016 general election
 -   **Analyzing UCSB Grades During Remote Instruction** \| `r python_text()` \| [report](files/ucsb-pandemic-grades.html)
     -   Investigated the impact of online learning on UCSB students' grades during the COVID-19 pandemic
+-   **Analyzing Voter Turnout in Alaska for the 2016 General Election** \| `r python_text()` \| [report](files/voter-turnout.html)
+    -   Looked into how demographic factors played a role in Alaskan voter participation during the 2016 general election
 -   **Lyrics Frequency Visualizer** \| `r python_text()` \| [code](https://github.com/hillfields/lyrics-frequency-visualizer)
     -   Made a simple app to access the Spotify API, scrape Japanese song lyrics, and visualize their word frequencies
 
