--- a/coursework.qmd
+++ b/coursework.qmd
@@ -10,12 +10,6 @@ python_text <- function() text_spec("Python", color = "green")
 r_text <- function() text_spec("R", color = "#ff9600")
 ```
 
-## Currently Taking
-
--   **LING 111:** Advanced Computational Linguistics: Text Processing (`r python_text()`)
--   **C LIT 152:** Digital Humanities Practice (`r python_text()`)
--   **PSTAT 197C:** Data Science Capstone (`r r_text()` & `r python_text()`)
-
 ## Computer Science
 
 -   **CMPSC 8:** Introduction to Computer Science (`r python_text()`)
@@ -38,7 +32,7 @@ r_text <- function() text_spec("R", color = "#ff9600")
 -   **PSTAT 174:** Time Series (`r r_text()`)
 -   **PSTAT 190:** Teaching and Mentoring Statistics and Data Science
 -   **PSTAT 194CS:** Computational Statistics (`r r_text()`)
--   **PSTAT 197A-B:** Data Science Capstone (`r r_text()` & `r python_text()`)
+-   **PSTAT 197A-B-C:** Data Science Capstone (`r r_text()` & `r python_text()`)
 
 ## Math
 
@@ -57,9 +51,18 @@ r_text <- function() text_spec("R", color = "#ff9600")
 
 ## Linguistics
 
--   **LING 20:** Language And Linguistics
+-   **LING 20:** Language and Linguistics
 -   **LING 102:** Programming for Linguists (`r python_text()`)
 -   **LING 104:** Statistical Methods in Linguistics (`r r_text()`)
 -   **LING 105:** Predictive Modeling in Linguistics (`r r_text()`)
 -   **LING 106:** Introduction to Phonology
 -   **LING 110:** Foundations of Computational Linguistics (`r python_text()`)
+-   **LING 111:** Advanced Computational Linguistics: Text Processing (`r python_text()`)
+
+## Other Classes I Enjoyed
+
+-   **C LIT 152:** Digital Humanities Practice (`r python_text()`)
+-   **EACS 136:** Children at War
+-   **JAPAN 63:** Sociology of Japan
+-   **JAPAN 165:** Popular Culture in Japan
+-   **MUS 11:** Fundamentals of Music
