update about and projects

--- a/projects.qmd
+++ b/projects.qmd
@@ -5,7 +5,7 @@ title: "Projects"
 ## Research
 
 ::: {layout-ncol="2"}
-![Understanding and Modeling Human Mobility Response to California Wildfires \[[summary](files/move-capstone-summary.pdf)\]](img/move-animation.gif)
+![Understanding and Modeling Human Mobility Response to California Wildfires \[[summary](files/move-capstone-summary.pdf)\]](img/poi-visits.png)
 
 ![Underrepresented Minority Music Students at California Community Colleges \[[poster](files/murm-poster.pdf)\]](img/murm-survey.png)
 :::
@@ -19,7 +19,7 @@ title: "Projects"
 
 ![Modeling the 2020 Presidential Election \[[report](files/election-analysis.html)\]](img/election-models.png)
 
-![Anime Score Predictor \[[code](https://github.com/hillfields/predicting-anime-scores)\]](img/anime-score-predictor.png)
+![Anime Score Predictor \[[code](https://github.com/hillfields/predicting-anime-scores)\]](img/anime-score-predictor.gif)
 :::
 
 ## Python
@@ -28,8 +28,6 @@ title: "Projects"
 ![Examining LLM Tweets using NLP \[[Colab](https://colab.research.google.com/drive/11niKxug9SfYIOMzmLKhhsx4Aazbeq7mC?usp=sharing)\]](img/llm-topics.png)
 
 ![Lyrics Frequency Visualizer \[[code](https://github.com/hillfields/lyrics-frequency-visualizer)\]](img/lyrics-frequency-chart.png)
-
-![Analyzing Voter Turnout in Alaska \[[report](files/voter-turnout.html)\]](img/voter-logistic-coefficients.png)
 
 ![Analyzing UCSB Grades During Remote Instruction \[[report](files/ucsb-pandemic-grades.html)\]](img/departments-grade-diffs.svg)
 :::
