--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: Justin Liu
 about:
-  template: solana
+  template: trestles
   image: img/pfp.png
   image-shape: round
   links:
@@ -13,31 +13,29 @@ about:
       href: mailto:justintliu@ucsb.edu
 ---
 
-Profile picture credit to ぬくぬくにぎりめし
-
 ## About Me
 
--   Statistics & Data Science major and Computational Linguistics minor @ UCSB
--   [IB Diploma](https://www.ibo.org/programmes/diploma-programme/) Recipient
+-   **Education:**
+    -   Statistics & Data Science major and Linguistics minor (Speech & Technologies Emphasis) \@ UCSB
+    -   Graduate of the [IB Program](https://www.ibo.org/programmes/diploma-programme/), one of the most rigorous high school curriculums
 -   **Interests:** data analysis & visualization, music, Japanese
 
 ## Experience
 
--   **Undergraduate Learning Assistant** | PSTAT & CS Departments @ UCSB
+-   **Undergraduate Learning Assistant** \| PSTAT & CS Departments \@ UCSB
     -   *Classes supervised:* PSTAT 10 (Data Science Principles) and CS 5A (Introduction to Data Science)
--   **Sponsored Capstone Member** | [MOVE Lab](http://move.geog.ucsb.edu/) @ UCSB
+-   **Sponsored Capstone Member** \| [MOVE Lab](http://move.geog.ucsb.edu/) \@ UCSB
     -   *Topic:* Understanding and Modeling Human Mobility Response to California Wildfires
--   **Undergraduate Research Assistant** | [CPLS Lab](https://ucsb-cpls-lab.github.io/) @ UCSB
+-   **Undergraduate Research Assistant** \| [CPLS Lab](https://ucsb-cpls-lab.github.io/) \@ UCSB
     -   *Topic:* Stimuli Redesign for Spanish Proto-lexicon Experiments
--   **Undergraduate Research Assistant** | Education Department @ UCSB
+-   **Undergraduate Research Assistant** \| Education Department \@ UCSB
     -   *Topic:* Underrepresented Minority Music Students at California Community Colleges
--   **Notetaker/Proctor** | Disabled Students Program @ UCSB
--   **Tutor** | AVID program
+-   **Notetaker/Proctor** \| Disabled Students Program \@ UCSB
+-   **Tutor** \| AVID Program
 
 ## Technical Skills
 
 -   **Languages:** R, Python, SQL, HTML/CSS
--   **Libraries:** Shiny, tidyverse/tidymodels, Leaflet, NumPy, Pandas, Seaborn, Matplotlib, Altair, Scikit-learn, PySpark, Tensorflow, spaCy
--   **Developer Tools:** RStudio, Jupyter, Git/GitHub, Visual Studio Code, Google Cloud Platform, Google Colab
--   **Awards:** 3-time recipient of the [Creative Computing Scholarship](https://summer.ucsb.edu/courses/course-spotlight/creative-computing)
--   **Other:** Qualtrics, Google Workspace, Microsoft Office, Slack
+-   **Libraries:** Shiny, ggplot2, tidyverse, tidymodels, Leaflet, NumPy, Pandas, Seaborn, Matplotlib, Altair, Scikit-learn, PySpark, Tensorflow, spaCy
+-   **Developer Tools:** RStudio, Jupyter, VS Code, Git/GitHub, Google Cloud Platform
+-   **Other:** Qualtrics, Google Workspace, Slack
